--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,26 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.pagination a {
+  color: black;
+  float: left;
+  padding: 16px;
+  text-decoration: none;
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.pagination a:hover {background-color: #b3dbe7;}
+
+.table th{
+  border: 2px solid black;
+}
+.table td{
+  border: 1px solid black;
+ border-collapse: collapse;
+  height: 30px;
+  width: 0px; 
+
+}
+.table tr{
+  border: 2px solid black;
+}
+.table tr:nth-child(even) {
+  background-color: #f2f2f2;
 }
