--- a/src/index.css
+++ b/src/index.css
@@ -24,3 +24,19 @@
 .table tr:nth-child(even) {
   background-color: #f2f2f2;
 }
+
+
+/* navbar */
+#nav{
+  float: left;
+  border: 1px solid black;
+  height: 35px;
+  width: 200px;
+  padding: 3px;
+  text-align: center;
+
+}
+
+div a{
+  text-decoration: none;
+}
