--- a/src/App.css
+++ b/src/App.css
@@ -1,223 +1,9 @@
-body{
-      margin: 0;
-      padding: 0;
-      background-color: #1d2634;
-      color: #9e9ea4;
-      font-family: "Montserrat", sans-serif;
+.carousel h1 {
+    font-family: "myFirstFont";
+
 }
 
-
-/* header */
-
-.header{
-      grid-area: header;
-      height: 60px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding:  0 30px 0 30px;
-      box-shadow: 0 6px 7px -3px rgba(0,0,o,0.35);
-}
-.grid-container{
-      display: grid;
-      grid-template-columns: 260px 1fr 1fr 1fr;
-      grid-template-rows: 0.2fr 3fr;
-      grid-template-areas:
-        'sidebar header header header'
-        'sidebar main main main';
-      height: 100vh;
-}
-
-.menu-icon{
-      display:  none;;
-}
-
-
-/* end header */
-
-
-/* sidebar */
-
-#sidebar {
-      grid-area: sidebar;
-      height: 100%;
-      background-color: #263043;
-      overflow-y: auto;
-      transition: all 0.5s;
-      -webkit-transition: all 0.5s;
-    }
-    
-    .sidebar-title {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 15px 30px 0px 30px;
-      margin-bottom: 30px;
-    }
-    
-    .sidebar-title > span {
-      display: none;
-      
-    }
-    .close_icon{
-      color: red;
-      margin-top: 10px;
-      margin-left: 30px;
-      cursor: pointer;
-    }
-    
-    .sidebar-brand {
-      margin-top: 15px;
-      font-size: 20px;
-      font-weight: 700;
-    }
-    
-    .sidebar-list {
-      padding: 0;
-      list-style-type: none;
-    }
-    
-    .sidebar-list-item {
-      padding: 20px 20px 20px 20px;
-      font-size: 18px;
-    }
-    
-    .sidebar-list-item:hover {
-      background-color: rgba(255, 255, 255, 0.2);
-      cursor: pointer;
-    }
-    
-    .sidebar-list-item > a {
-      text-decoration: none;
-      color: #9e9ea4;
-    }
-    
-    .sidebar-responsive {
-      display: inline !important;
-      position: absolute;
-      /*
-        we want the z-index of the sidebar higher so that
-        the charts are not showing over the sidebar 
-        on small screens
-      */
-      z-index: 12 !important;
-    }
-    
-/* end sidebar */
-
-
-/* main */
-
-.main-container {
-  grid-area: main;
-  overflow-y: auto;
-  padding: 20px 20px;
-  color: rgba(255, 255, 255, 0.95);
-}
-
-.main-title {
-  display: flex;
-  justify-content: space-between;
-}
-
-.main-cards {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  gap: 20px;
-  margin: 15px 0;
-}
-
-.card {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  padding: 8px 15px;
-  border-radius: 5px;
-}
-
-.card:first-child {
-  background-color: #2962ff;
-}
-
-.card:nth-child(2) {
-  background-color: #f6b481;
-}
-
-.card:nth-child(3) {
-  background-color: #97fd9c;
-}
-
-.card:nth-child(4) {
-  background-color: #f47373;
-}
-
-.card-inner {
-  /* align-content: space-between; */
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.card-inner h4{
-  font-weight: 700;
-}
-
-.card-inner .card_icon {
-  font-size: 25px;
-}
-
-.charts {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 20px;
-  margin-top: 60px;
-  height: 300px;
-}
-
-/* End Main  */
-
-
-
-@media screen and (max-width: 992px) {
-  .grid-container {
-    grid-template-columns: 1fr;
-    grid-template-rows: 0.2fr 3fr;
-    grid-template-areas:
-      'header'
-      'main';
-  }
-
-  #sidebar {
-    display: none;
-  }
-
-  .menu-icon {
-    display: inline;
-  }
-
-  .sidebar-title > span {
-    display: inline;
-  }
-}
-/* Small <= 768px */
-  
-@media screen and (max-width: 768px) {
-  .main-cards {
-    grid-template-columns: 1fr;
-    gap: 10px;
-    margin-bottom: 0;
-  }
-
-  .charts {
-    grid-template-columns: 1fr;
-    margin-top: 30px;
-  }
-}
-
-
-/* Extra Small <= 576px */
-
-@media screen and (max-width: 576px) {
-  .hedaer-left {
-    display: none;
-  }
+@font-face {
+    font-family: myFirstFont;
+    src: url('/public/fonts/TheCircousStriped.ttf') format('truetype');
 }
