--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
     font-size: 4.5vw;
 
 }
+
 .carousel p {
     font-weight: bold;
     font-size: 2.5vw;
@@ -16,17 +17,19 @@
 
 /* things to this month starts here */
 
-.thisMonth{
+.thisMonth {
     padding: 2%;
     margin: 2% 0;
 }
-.thisMonth h1{
+
+.thisMonth h1 {
     font-weight: bolder;
-    font-size: 5.5vw;
+    font-size: 5vw;
     margin: 4vh 0;
 
 }
-.thisMonthItems{
+
+.thisMonth .thisMonthItems {
     overflow: auto;
     scroll-behavior: smooth;
     width: 100%;
@@ -34,14 +37,14 @@
     border-bottom: 2px solid rgb(223, 220, 220);
     gap: 3;
 }
-.thisMonth .card{
+.thisMonth .thisMonthItems > * {
+    margin-right: 10px;
+}
+
+.thisMonth .card {
 
     display: inline-block;
-    text-align: center;
     text-decoration: none;
-
-    width: 30rem;
-    
     border: 2px solid black;
 
     overflow: hidden;
@@ -49,6 +52,48 @@
     text-overflow: ellipsis;
 
 }
+
+/* For small screens (sm) */
+@media (max-width: 576px) {
+    .thisMonth .card {
+        width: 75vw;
+        font-size: small;
+    }
+}
+
+/* For medium screens (md) and large screen (lg) */
+@media (min-width: 576px){
+    .thisMonth .card {
+        width: 40vw;
+    }
+}
+
 .thisMonthItems::-webkit-scrollbar {
     display: none;
+}
+
+.thisMonth.card {
+    position: relative;
+}
+
+.thisMonth .card-img-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: auto;
+    bottom: auto;
+    background-color: rgba(0, 0, 0, 0.8);
+    color: white;
+    padding: 15px;
+    width: auto;
+    height: auto;
+    border-radius: 0 0 30px 0;
+    line-height: 1;
+
+}
+
+.thisMonth .card-img-overlay .card-text {
+    font-size: small;
+    font-weight: 600;
+    color: white;
 }
