--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,8 @@
     white-space: nowrap;
     text-overflow: ellipsis;
 
+    border-radius: 40px 5px 40px 5px;
+
 }
 
 /* For small screens (sm) */
@@ -75,7 +77,9 @@
 .thisMonth.card {
     position: relative;
 }
-
+.thisMonth .btn{
+    background-color:'#8B008B'
+}
 .thisMonth .card-img-overlay {
     position: absolute;
     top: 0;
@@ -97,3 +101,32 @@
     font-weight: 600;
     color: white;
 }
+
+/* things to this month ends here */
+
+
+.video-container {
+    position: relative;
+    width: 100%;
+    height: 100vh; /* Full viewport height */
+    overflow: hidden;
+  }
+  
+  .background-video {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%; /* Adjust to fill the screen */
+    height: 100%;
+    object-fit: cover; /* Ensures the video covers the entire area */
+    z-index: -1; /* Send video to the back */
+  }
+  
+  .video-container .content {
+    position: relative;
+    z-index: 1; /* Bring content to the front */
+    color: white;
+    text-align: center;
+    padding: 20px;
+  }
