--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,8 @@
     border-bottom: 2px solid rgb(223, 220, 220);
     gap: 3;
 }
-.thisMonth .thisMonthItems > * {
+
+.thisMonth .thisMonthItems>* {
     margin-right: 10px;
 }
 
@@ -64,7 +65,7 @@
 }
 
 /* For medium screens (md) and large screen (lg) */
-@media (min-width: 576px){
+@media (min-width: 576px) {
     .thisMonth .card {
         width: 40vw;
     }
@@ -77,9 +78,11 @@
 .thisMonth.card {
     position: relative;
 }
-.thisMonth .btn{
-    background-color:'#8B008B'
+
+.thisMonth .btn {
+    background-color: '#8B008B'
 }
+
 .thisMonth .card-img-overlay {
     position: absolute;
     top: 0;
@@ -105,41 +108,51 @@
 /* things to this month ends here */
 
 
+/* second landing vedio css starts here*/
 .video-container {
     position: relative;
     width: 100%;
-    height: 100vh; /* Full viewport height */
+    height: 75vh;
+    /* Full viewport height */
     overflow: hidden;
-  }
-  
-  .background-video {
+}
+
+.background-video {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 100%; /* Adjust to fill the screen */
+    width: 100%;
+    /* Adjust to fill the screen */
     height: 100%;
-    object-fit: cover; /* Ensures the video covers the entire area */
-    z-index: -1; /* Send video to the back */
-  }
-  
-  .video-container .content {
+    object-fit: cover;
+    /* Ensures the video covers the entire area */
+    z-index: -1;
+    /* Send video to the back */
+}
+
+.video-container .content {
     position: relative;
-    z-index: 1; /* Bring content to the front */
+    z-index: 1;
+    /* Bring content to the front */
     color: white;
     text-align: center;
-    padding: 20px;
-  }
+    padding: 20%;
+}
+
+/* second landing vedio css endds here*/
 
 /* filter starts here */
 
-.filterDropdown{
+.filterDropdown {
     display: flex;
     justify-content: center;
     padding: 1%;
-    gap: 3px;;
+    gap: 3px;
+    ;
 }
-.filterDropdown select{
+
+.filterDropdown select {
     width: auto;
     min-width: 300px;
     height: auto;
@@ -147,9 +160,11 @@
     font-weight: 600;
 
 }
-.filterDropdown input{
+
+.filterDropdown input {
     width: auto;
     min-width: 300px;
     min-height: 40px;
 }
+
 /* filter ends here */
