--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
 .carousel h1 {
     font-family: "myFirstFont";
-    font-size: 4.5vw;
-
+}
+.carousel img{
+    height: 100vh;
+    width: 100vw;
 }
 
 .carousel p {
@@ -22,7 +24,7 @@
     margin: 2% 0;
 }
 
-.thisMonth h1{
+.thisMonth h1 {
     font-weight: bolder;
     font-size: 5vw;
     margin: 4vh 0;
@@ -43,7 +45,6 @@
 }
 
 .thisMonth .card {
-
     display: inline-block;
     text-decoration: none;
     border: 2px solid black;
@@ -53,34 +54,23 @@
     text-overflow: ellipsis;
 
     border-radius: 40px 5px 40px 5px;
-
 }
 
 /* For small screens (sm) */
 @media (max-width: 576px) {
     .thisMonth .card {
         width: 75vw;
+    }
+
+    * {
         font-size: small;
     }
-
-    .placeCardContainer {
-
-        display: flex;
-        height: auto;
-        width: 100%;
-        overflow: auto;
-        scroll-behavior: smooth
-    }
-
-    .mapSection .placeCard{
-
-        width: 300px;
-        padding: 5px;
-
-        margin-right: 10px;
-        border-right: 2px solid gray;
-        cursor: pointer;
-    }
+    .carousel h1 {
+        font-size: 4.5vh;
+    }  
+    .carousel p {
+        font-size: 2vh;
+    }  
 }
 
 /* For medium screens (md) and large screen (lg) */
@@ -88,18 +78,11 @@
     .thisMonth .card {
         width: 40vw;
     }
-
-    .placeCardContainer {
-        height: 80vh;
-        overflow: auto;
-        scroll-behavior: smooth
+    .carousel h1 {
+        font-size: 4.5vw;
     }
-
-    .mapSection .placeCard{
-        padding: 5px;
-        margin-top: 10px;
-        border-bottom: 2px solid gray;
-        cursor: pointer;
+    .carousel p {
+        font-size: 2vw;
     }
 }
 
@@ -121,7 +104,7 @@
     left: 0;
     right: auto;
     bottom: auto;
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgba(30, 28, 28, 0.7);
     color: white;
     padding: 15px;
     width: auto;
@@ -141,20 +124,79 @@
 
 
 /* mapSection css starts here */
-.mapSection h1{
+
+.mapSection h1 {
     font-weight: bolder;
     font-size: 4vw;
-    margin:0;
-
+    margin: 0;
 }
-.mapSection h6{
+
+.mapSection h6 {
     font-weight: bolder;
 }
-.mapSection .placeCard img{
-    height: 50%;
-    width: 100%;
 
+/* For small screens (sm) */
+@media (max-width: 576px) {
+
+    .placeCardContainer {
+        display: flex;
+        height: auto;
+        width: 100%;
+        overflow: auto;
+        scroll-behavior: smooth;
+    }
+
+    .mapSection .placeCard {
+
+        width: 100%;
+        padding: 5px;
+        margin-right: 10px;
+        cursor: pointer;
+
+    }
+
+    .mapSection .placeCard img {
+        width: 60vw;
+        height: 25vh;
+    }
+
+
+    #map {
+        height: 60vh;
+        width: 100%;
+        border: 1px solid gray
+    }
 }
+
+/* For medium screens (md) and large screen (lg) */
+@media (min-width: 576px) {
+
+    .placeCardContainer {
+        height: 80vh;
+        overflow: auto;
+        scroll-behavior: smooth
+    }
+
+    .mapSection .placeCard {
+        padding: 5px;
+        margin-top: 10px;
+        cursor: pointer;
+    }
+
+    .mapSection .placeCard img {
+        height: 50%;
+        width: 100%;
+
+    }
+
+    #map {
+        height: 80vh;
+        width: 100%;
+        border: 1px solid gray
+    }
+}
+
+
 /* mapSection css ends here */
 
 
