--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+html, body{
+    overflow-x: hidden;
+}
+
 .carousel h1 {
     font-family: "myFirstFont";
 }
@@ -26,7 +30,7 @@
 
 .thisMonth h1 {
     font-weight: bolder;
-    font-size: 5vw;
+    font-size: 4.5vw;
     margin: 4vh 0;
 
 }
@@ -147,7 +151,6 @@
         overflow: auto;
         scroll-behavior: smooth;
     }
-
     .mapSection .placeCard {
 
         width: 100%;
