--- a/src/App.css
+++ b/src/App.css
@@ -30,25 +30,6 @@ body {
     font-weight: bold
 }
 
-/* things to this month starts here */
-
-.home-page-month {
-    padding: 2%;
-    margin: 2% 0;
-}
-
-.home-page-month .card {
-
-    border: 2px solid black;
-    height: auto;
-
-    border-radius: 5px;
-}
-.home-page-month_items .card-text > *{
-    margin-top: 5%;
-
-}
-
 /* For small screens (sm) */
 @media (max-width: 576px) {
 
@@ -81,6 +62,20 @@ body {
     display: none;
 }
 
+
+/* things to this month starts here */
+
+.home-page-month {
+    padding: 5%;
+    margin: 0;
+}
+
+
+.inc-home-page-month-card .card {
+    border: 0px;
+    padding: 0px !important;
+}
+
 .home-page-month .card-img-overlay {
     position: absolute;
     top: 0;
@@ -89,10 +84,10 @@ body {
     bottom: auto;
     background-color: rgba(30, 28, 28, 0.7);
     color: white;
-    padding: 15px;
+    padding: 10px;
     width: auto;
     height: auto;
-    border-radius: 0 0 30px 0;
+    border-radius: 5px 0 30px 0;
     line-height: 1;
 
 }
@@ -102,6 +97,23 @@ body {
     font-weight: 600;
     color: white;
 }
+
+.home-page-month-items .card-text>* {
+    margin-top: 5%;
+}
+
+.inc-home-page-month-card {
+    height: 34rem;
+    border: 2px solid black;
+    padding: 0px !important;
+    border-radius: 8px !important;
+}
+
+.home-page-month-items .slick-slide {
+    padding: 5px;
+    
+}
+
 
 /* things to this month ends here */
 
@@ -256,14 +268,15 @@ body {
     height: auto;
 }
 
-.inc-experience-main{
+.inc-experience-main {
     background: url('https://www.incredibleindia.gov.in/content/dam/incredible-india/images/global/background-images/experience-bg.jpg') no-repeat center center !important;
     background-size: cover;
     background-repeat: no-repeat;
     height: auto;
 }
 
-.inc-attractions-main h1, .inc-experience-main h1 {
+.inc-attractions-main h1,
+.inc-experience-main h1 {
     font-weight: bolder;
     /* font-size: 4vw; */
 }
@@ -283,7 +296,9 @@ body {
     align-items: center;
 }
 
-.inc-attractions-card, .inc-experience-card, .inc-home-page-month-card{
+.inc-attractions-card,
+.inc-experience-card,
+.inc-home-page-month-card {
     box-sizing: border-box;
     padding: 5px;
     position: relative;
@@ -295,7 +310,9 @@ body {
 
 
 
-.inc-attractions-card:hover, .inc-experience-card:hover ,.inc-home-page-month-card:hover {
+.inc-attractions-card:hover,
+.inc-experience-card:hover,
+.inc-home-page-month-card:hover {
     cursor: pointer;
     /* box-shadow: 0px 2px 0px 2px rgba(0, 0, 0, 0.5); */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
@@ -309,7 +326,8 @@ body {
     border-radius: 10px;
 }
 
-.inc-attractions-image-container img , .inc-experience-image-container img{
+.inc-attractions-image-container img,
+.inc-experience-image-container img {
     width: 100%;
     height: auto;
     object-fit: cover;
@@ -317,7 +335,8 @@ body {
     overflow: hidden;
     border-radius: 10px;
 }
-.inc-experience-image-container img{
+
+.inc-experience-image-container img {
     border-radius: 0px;
 }
 
@@ -334,7 +353,7 @@ body {
     border-radius: 10px;
 }
 
-.inc-attractions-heading{
+.inc-attractions-heading {
     position: absolute;
     bottom: 0;
     left: 0;
@@ -346,10 +365,9 @@ body {
     text-align: center;
 }
 
-.slick-track{
+.slick-track {
     margin-top: 4.5vh;
 }
-
 
 .slick-prev,
 .slick-next {
@@ -405,7 +423,8 @@ body {
 @media (max-width: 425px) {
 
     /* Extra small screens (xs) */
-    .inc-attractions-main, .inc-experience-main {
+    .inc-attractions-main,
+    .inc-experience-main {
         padding: 3.5vw;
     }
 }
@@ -413,7 +432,8 @@ body {
 @media (min-width: 425px) and (max-width: 768px) {
 
     /* Medium screens (md) */
-    .inc-attractions-main, .inc-experience-main{
+    .inc-attractions-main,
+    .inc-experience-main {
         padding: 3.5vw;
     }
 
@@ -422,7 +442,8 @@ body {
 @media (min-width: 768px) and (max-width: 991px) {
 
     /* Large screens (lg) */
-    .inc-attractions-main, .inc-experience-main {
+    .inc-attractions-main,
+    .inc-experience-main {
         padding: 3.5vw;
     }
 }
@@ -430,7 +451,8 @@ body {
 @media (min-width: 991px) {
 
     /* Large screens (lg) */
-    .inc-attractions-main, .inc-experience-main {
+    .inc-attractions-main,
+    .inc-experience-main {
         padding: 11vw;
     }
 
